cilium-bigip/f5-hello-world-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5-hello-world
  namespace: default
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: f5-hello-world
  template:
    metadata:
      labels:
        app: f5-hello-world
    spec:
      containers:
      - env:
        - name: service_name
          value: f5-hello-world
        image: f5devcentral/f5-hello-world:latest
        imagePullPolicy: Always
        name: f5-hello-world
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5-hello-world-https
  namespace: default
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: f5-hello-world-https
  template:
    metadata:
      labels:
        app: f5-hello-world-https
    spec:
      containers:
      - env:
        - name: service_name
          value: f5-hello-world-https
        image: f5devcentral/f5-hello-world:latest
        imagePullPolicy: Always
        name: f5-hello-world-https
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5-hello-world-waf
  namespace: default
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: f5-hello-world-waf
  template:
    metadata:
      labels:
        app: f5-hello-world-waf
    spec:
      containers:
      - env:
        - name: service_name
          value: f5-hello-world-waf
        image: f5devcentral/f5-hello-world:latest
        imagePullPolicy: Always
        name: f5-hello-world-waf
        ports:
        - containerPort: 8080
          protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5-hello-world-end-to-end-ssl
  namespace: default
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: f5-hello-world-end-to-end-ssl
  template:
    metadata:
      labels:
        app: f5-hello-world-end-to-end-ssl
    spec:
      containers:
      - env:
        - name: service_name
          value: f5-hello-world-end-to-end-ssl
        image:  f5devcentral/f5-demo-httpd
        imagePullPolicy: Always
        name: f5-hello-world-end-to-end-ssl
        ports:
        - containerPort: 443
          protocol: TCP
