cilium-bigip/f5-hello-world-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f5-hello-world
  namespace: default
  labels:
    app: f5-hello-world
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: A1
    cis.f5.com/as3-pool: web_pool
spec:
  ports:
  - name: f5-hello-world
    port: 8080
    protocol: TCP
  type: ClusterIP 
  selector:
    app: f5-hello-world
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: f5-hello-world-https
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: A2
    cis.f5.com/as3-pool: secure_pool
  name: f5-hello-world-https
  namespace: default
spec:
  ports:
  - name: f5-hello-world-https
    port: 8080
    protocol: TCP
  type: ClusterIP 
  selector:
    app: f5-hello-world-https
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: f5-hello-world-waf
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: A3
    cis.f5.com/as3-pool: waf_pool
  name: f5-hello-world-waf
  namespace: default
spec:
  ports:
  - name: f5-hello-world-waf
    port: 8080
    protocol: TCP
  type: ClusterIP 
  selector:
    app: f5-hello-world-waf
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: f5-hello-world-end-to-end-ssl
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: A4
    cis.f5.com/as3-pool: secure_ssl_pool
  name: f5-hello-world-end-to-end-ssl
  namespace: default
spec:
  ports:
  - name: f5-hello-world-end-to-end-ssl
    port: 443
    protocol: TCP
  type: ClusterIP 
  selector:
    app: f5-hello-world-end-to-end-ssl
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: f5-hello-world-end-to-end-ssl
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: A5
    cis.f5.com/as3-pool: secure_ssl_waf_pool
  name: f5-hello-world-end-to-end-ssl-waf
  namespace: default
spec:
  ports:
  - name: f5-hello-world-end-to-end-ssl-waf
    port: 443
    protocol: TCP
  type: ClusterIP 
  selector:
    app: f5-hello-world-end-to-end-ssl
