cilium-bigip/nginx_pod_cluster_service.yaml

apiVersion: v1
kind: Service
metadata:
  labels:
    name: nginxservice
  name: nginxservice
spec:
  ports:
    # The port that this service should serve on.
    - port: 80
  selector:
    app: nginx
  type: ClusterIP 
#  externalIPs:
#    - 192.168.121.66
